# tymove-prace-2025

./: Cargo.toml  plan.txt  readme.html
frontend/: index.html
important-lolcode/: hiiii.lol
rust-backend/: api.rs
src/: admin.rs  auth.rs  db.rs  export.rs  export.ss  main.rs  models.rs  routes.rs  sql.rs  vote.rs
