[package]
name = "tymove-prace-2025"
version = "0.1.0"
edition = "2021"

[dependencies]

actix-web = "4"

serde = { version = "1.0", default-features = false }

tokio = { version = "1.44.0", features = ["full"] }

chrono = "0.4.40"
tokio-macros = "2.5.0"
csv = "1.3.1"
governor = "0.8.1"
sqlx = { version = "0.6.3", features = ["postgres", "macros", "runtime-actix-rustls", "time"] }
dotenvy = "0.15"
auth = "0.1.0"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
protobuf = "3.7.2"
time = "0.3.40"
log = "0.4.26"
env_logger = "0.11.7"
